Add description to site; Add list; Add links

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <p>Aqui vai um breve texto explicando sobre o site!</p>
+    <h2>Avaiable Recipes:</h2>
+    <a href="recipes/mignon.html">Blue Cheese Crusted Filet Mignon</a>
+    <a href="recipes/mushrooms.html">Mouth-Watering Stuffed Mushrooms</a>
+    <a href="recipes/salmon.html">Basic Grilled Salmon</a>
 </body>
 </html>
