--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <h1>Odin Recipes</h1>
     <p>Aqui vai um breve texto explicando sobre o site!</p>
     <h2>Avaiable Recipes:</h2>
-    <a href="recipes/mignon.html">Blue Cheese Crusted Filet Mignon</a>
-    <a href="recipes/mushrooms.html">Mouth-Watering Stuffed Mushrooms</a>
-    <a href="recipes/salmon.html">Basic Grilled Salmon</a>
+    <ul>
+        <li><a href="recipes/mignon.html">Blue Cheese Crusted Filet Mignon</a></li>
+        <li><a href="recipes/mushrooms.html">Mouth-Watering Stuffed Mushrooms</a></li>
+        <li><a href="recipes/salmon.html">Basic Grilled Salmon</a></li>
+    </ul>
 </body>
 </html>
