Add a disclaimer at the end of the page

--- a/recipes/mignon.html
+++ b/recipes/mignon.html
@@ -9,14 +9,61 @@
 <body>
     <h1>Blue Cheese Crusted Filet Mignon with Port wine Sauce</h1>
         <img src="../images/crusted_filet.jpg" alt="Crusted Fillet Mignon" width="400">
+
     <h2>Before you start</h2>
+        <h3>Timing</h3>
+            <ul>
+                <li><b>Prep Time: </b>10 mins</li>
+                <li><b>Cook Time: </b>16 mins</li>
+                <li><b>Additional Time: </b>02 hours</li>
+                <li><b>Total Time: </b>02 hours 31 mins</li>
+                <li><b>Servings: </b>6</li>
+                <li><b>Yield: </b>6 servings</li>
+            </ul>
+
+        <h3>Nutrition Facts</h3>
+            <ul>
+                <li><b>Calories: </b>402</li>
+                <li><b>Fat: </b>28 g</li>
+                <li><b>Carbs: </b>09 g</li>
+                <li><b>Protein: </b>25 g</li>
+            </ul>
+
+    <h2>Ingredients</h2>
         <ul>
-            <li><b>Prep Time: </b>10 mins</li>
-            <li><b>Cook Time: </b>16 mins</li>
-            <li><b>Additional Time: </b>02 hours</li>
-            <li><b>Total Time: </b>02 hours 31 mins</li>
-            <li><b>Servings: </b>6</li>
-            <li><b>Yield: </b>6 servings</li>
+            <li>1 tablespoon butter</li>
+            <li>1/2 cup minced white onion</li>
+            <li>3 cloves garlic, minced</li>
+            <li>1 tablespoon chopped fresh thyme</li>
+            <li>3/4 cup low-sodium beef broth</li>
+            <li>1/2 cup port wine</li>
+            <li>1 tablespoon vegetable oil</li>
+            <li>4 filet mignon steaks (1 1/2 inch thick)</li>
+            <li>3/4 cup crumbled blue cheese</li>
+            <li>1/4 cup panko bread crumbs</li>
         </ul>
+
+    <h2>Directions</h2>
+        <h3>Step 1</h3>
+            <p>Melt butter in a skillet over medium heat. Add the onion, garlic and thyme. 
+                Cook, stirring constantly, until onion is tender. Stir in the beef broth, 
+                scraping any onion bits from the bottom of the pan, then stir in the port wine. 
+                Bring to a boil, and cook until the mixture has reduced to about 1/2 cup. Set aside. 
+                This may also be made ahead of time, and reheated.</p>
+        <h3>Step 2</h3>
+            <p>Preheat the oven to 350 degrees F (175 degrees C). Heat oil in a cast-iron or 
+                other oven-safe skillet over high heat. Sear steaks quickly on both sides until 
+                brown, then place the whole pan into the oven.</p>
+        <h3>Step 3</h3>
+            <p>Roast steaks in the oven for about 15 minutes for medium rare - with an 
+                internal temperature of 145 degrees F (63 degrees C). You may adjust this 
+                time to allow the steaks to finish just below your desired degree of 
+                doneness if medium is not what you prefer. Remove from the oven, and place 
+                on a baking sheet. Stir together the panko crumbs and blue cheese. Top each 
+                steak with a layer of this mixture.</p>
+        <h3>Step 4</h3>
+            <p>Preheat the oven's broiler. Place steaks under the preheated broiler until the cheese 
+                topping is browned and bubbly. 3 to 4 minutes. Remove from the oven, and let stand 
+                for at least 15 minutes before serving. Serve with warm port wine sauce.</p>
 </body>
 </html>
