Add basic structure to mushrooms and salmon files

--- a/recipes/mignon.html
+++ b/recipes/mignon.html
@@ -65,5 +65,9 @@
             <p>Preheat the oven's broiler. Place steaks under the preheated broiler until the cheese 
                 topping is browned and bubbly. 3 to 4 minutes. Remove from the oven, and let stand 
                 for at least 15 minutes before serving. Serve with warm port wine sauce.</p>
+    <h2>Disclaimer</h2>
+            <p>All the information above can be found at 
+                <a href="https://www.allrecipes.com/recipe/72267/blue-cheese-crusted-filet-mignon-with-port-wine-sauce/">
+                All Recipes Website</a>. All credits given to the author of this recipe.</p>
 </body>
 </html>
