Change Ingredients title to <h3>

--- a/recipes/mushrooms.html
+++ b/recipes/mushrooms.html
@@ -4,53 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Stuffed Mushrooms</title>
 </head>
 <body>
-    <h1>Blue Cheese Crusted Filet Mignon with Port wine Sauce</h1>
-        <img src="../images/abc.jpg" alt="" width="400">
+    <h1>Mouth-Watering Stuffed Mushrooms</h1>
+        <img src="../images/stuffed_mushrooms.jpg" alt="" width="650">
 
     <h2>Before you start</h2>
         <h3>Timing</h3>
             <ul>
-                <li><b>Prep Time: </b> mins</li>
-                <li><b>Cook Time: </b> mins</li>
-                <li><b>Additional Time: </b> hours</li>
-                <li><b>Total Time: </b> hours</li>
-                <li><b>Servings: </b></li>
-                <li><b>Yield: </b> servings</li>
+                <li><b>Prep Time: </b>25 mins</li>
+                <li><b>Cook Time: </b>20 mins</li>
+                <li><b>Total Time: </b>45 mins</li>
+                <li><b>Servings: </b>12</li>
+                <li><b>Yield: </b>12 large mushrooms</li>
             </ul>
 
         <h3>Nutrition Facts</h3>
             <ul>
-                <li><b>Calories: </b></li>
-                <li><b>Fat: </b> g</li>
-                <li><b>Carbs: </b> g</li>
-                <li><b>Protein: </b> g</li>
+                <li><b>Calories: </b>88</li>
+                <li><b>Fat: </b>08 g</li>
+                <li><b>Carbs: </b>02 g</li>
+                <li><b>Protein: </b>03 g</li>
             </ul>
 
     <h2>Ingredients</h2>
         <ul>
-            <li></li>
+            <li>12 whole fresh mushrooms</li>
+            <li>1 tablespoon vegetable oil</li>
+            <li>1 tablespoon minced garlic</li>
+            <li>1 (8 ounce) package cream cheese, softened</li>
+            <li>1/4 cup grated Parmesan cheese</li>
+            <li>1/4 teaspoon ground black pepper</li>
+            <li>1/4 teaspoon onion powder</li>
+            <li>1/4 teaspoon ground cayenne pepper</li>
 
         </ul>
 
     <h2>Directions</h2>
         <h3>Step 1</h3>
-            <p></p>
+            <p>Preheat the oven to 350 degrees F (175 degrees C). Spray a baking sheet with cooking 
+                spray. Clean mushrooms with a damp paper towel; carefully break off stems. 
+                Chop stems extremely fine, discarding the tough end of stems.</p>
 
         <h3>Step 2</h3>
-            <p></p>
+            <p>Heat oil in a large skillet over medium heat. Add garlic and chopped mushroom stems; 
+                fry until any moisture has evaporated, taking care not to burn garlic. Set aside to 
+                cool.</p>
 
         <h3>Step 3</h3>
-            <p></p>
+            <p>Stir in cream cheese, Parmesan cheese, black pepper, onion powder, and cayenne. The 
+                mixture will be very thick; use a teaspoon to fill each mushroom cap with a generous 
+                amount of stuffing. Arrange mushroom caps on the prepared cookie sheet.</p>
 
         <h3>Step 4</h3>
-            <p></p>
+            <p>Bake in the preheated oven until the mushrooms are piping hot, about 20 minutes.</p>
 
     <h2>Disclaimer</h2>
             <p>All the information above can be found at 
-                <a href="">
+                <a href="https://www.allrecipes.com/recipe/15184/mouth-watering-stuffed-mushrooms/">
                 All Recipes Website</a>. All credits given to the author of this recipe.</p>
 </body>
 </html>
