--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p>Aqui vai um breve texto explicando sobre o site!</p>
-    <h2>Avaiable Recipes:</h2>
-    <ul>
-        <li><a href="recipes/mignon.html">Blue Cheese Crusted Filet Mignon</a></li>
-        <li><a href="recipes/mushrooms.html">Mouth-Watering Stuffed Mushrooms</a></li>
-        <li><a href="recipes/salmon.html">Basic Grilled Salmon</a></li>
-    </ul>
+        <p>Aqui vai um breve texto explicando sobre o site!</p>
+        
+    <h2>Available Recipes:</h2>
+        <ul>
+            <li><a href="recipes/mignon.html">Blue Cheese Crusted Filet Mignon with Port wine Sauce</a></li>
+            <li><a href="recipes/mushrooms.html">Mouth-Watering Stuffed Mushrooms</a></li>
+            <li><a href="recipes/salmon.html">Basic Grilled Salmon</a></li>
+        </ul>
 </body>
 </html>
