Add jpeg file buffet

--- a/recipes/mignon.html
+++ b/recipes/mignon.html
@@ -14,11 +14,11 @@
         <h3>Timing</h3>
             <ul>
                 <li><b>Prep Time: </b>10 mins</li>
-                <li><b>Cook Time: </b>16 mins</li>
-                <li><b>Additional Time: </b>02 hours</li>
-                <li><b>Total Time: </b>02 hours 31 mins</li>
-                <li><b>Servings: </b>6</li>
-                <li><b>Yield: </b>6 servings</li>
+                <li><b>Cook Time: </b>25 mins</li>
+                <li><b>Additional Time: </b>15 mins</li>
+                <li><b>Total Time: </b>50 mins</li>
+                <li><b>Servings: </b>4</li>
+                <li><b>Yield: </b>4 servings</li>
             </ul>
 
         <h3>Nutrition Facts</h3>
