--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -4,53 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Grilled Salmon</title>
 </head>
 <body>
-    <h1>Blue Cheese Crusted Filet Mignon with Port wine Sauce</h1>
-        <img src="../images/abc.jpg" alt="" width="400">
+    <h1>Basic Grilled Salmon</h1>
+        <img src="../images/grilled_salmon.jpg" alt="" width="400" height="450">
 
     <h2>Before you start</h2>
         <h3>Timing</h3>
             <ul>
-                <li><b>Prep Time: </b> mins</li>
-                <li><b>Cook Time: </b> mins</li>
-                <li><b>Additional Time: </b> hours</li>
-                <li><b>Total Time: </b> hours</li>
-                <li><b>Servings: </b></li>
-                <li><b>Yield: </b> servings</li>
+                <li><b>Prep Time: </b>15 mins</li>
+                <li><b>Cook Time: </b>16 mins</li>
+                <li><b>Additional Time: </b>02 hours</li>
+                <li><b>Total Time: </b>02 hours 31 mins</li>
+                <li><b>Servings: </b>6</li>
+                <li><b>Yield: </b>6 servings</li>
             </ul>
 
         <h3>Nutrition Facts</h3>
             <ul>
-                <li><b>Calories: </b></li>
-                <li><b>Fat: </b> g</li>
-                <li><b>Carbs: </b> g</li>
-                <li><b>Protein: </b> g</li>
+                <li><b>Calories: </b>318</li>
+                <li><b>Fat: </b>20 g</li>
+                <li><b>Carbs: </b>13 g</li>
+                <li><b>Protein: </b>21 g</li>
             </ul>
 
         <h3>Ingredients</h3>
             <ul>
-                <li></li>
-
+                <li>1 1/2 pounds salmon fillets</li>
+                <li>lemon pepper to taste</li>
+                <li>garlic powder to taste</li>
+                <li>salt to taste</li>
+                <li>1/3 cup soy sauce</li>
+                <li>1/3 cup brown sugar</li>
+                <li>1/3 cup water</li>
+                <li>1/4 cup vegetable oil</li>
             </ul>
 
     <h2>Directions</h2>
         <h3>Step 1</h3>
-            <p></p>
+            <p>Season salmon fillets with lemon pepper, garlic powder, and salt.</p>
 
         <h3>Step 2</h3>
-            <p></p>
+            <p>In a small bowl, stir together soy sauce, brown sugar, water, and vegetable oil 
+                until sugar is dissolved. Place fish in a large resealable plastic bag with the soy 
+                sauce mixture, seal, and turn to coat. Refrigerate for at least 2 hours.</p>
 
         <h3>Step 3</h3>
-            <p></p>
+            <p>Preheat grill for medium heat.</p>
 
         <h3>Step 4</h3>
-            <p></p>
+            <p>Lightly oil grill grate. Place salmon on the preheated grill, and discard marinade. 
+                Cook salmon for 6 to 8 minutes per side, or until the fish flakes easily with a 
+                fork.</p>
 
     <h2>Disclaimer</h2>
             <p>All the information above can be found at 
-                <a href="">
+                <a href="https://www.allrecipes.com/recipe/12720/grilled-salmon-i/">
                 All Recipes Website</a>. All credits given to the author of this recipe.</p>
 </body>
 </html>
