--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-        <p>Aqui vai um breve texto explicando sobre o site!</p>
-        
+        <p>This site is a part of The Odin Project curriculum, where i can practice some HTML</p>
+        <img src="images/buffett.jpeg" alt="Large Buffet">
     <h2>Available Recipes:</h2>
         <ul>
             <li><a href="recipes/mignon.html">Blue Cheese Crusted Filet Mignon with Port wine Sauce</a></li>
