Change paragraph position and text

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>Odin Recipes</title>
 </head>
+
 <body>
     <h1 class="main_title">Odin Recipes</h1>
-        <p class="main_title para">This site is a part of The Odin Project curriculum, where i can practice some HTML</p>
-        <img class="main_title image"src="images/buffett.jpeg" alt="Large Buffet">
+    <img class="image"src="images/buffett.jpeg" alt="Large Buffet">
+    <p class="para">This site is a part of The Odin Project curriculum, where i can practice some HTML and CSS</p> 
     <h2 class="second_title">Available Recipes:</h2>
-        <ul class="main_list">
-            <li><a class="main_list first" href="recipes/mignon.html">Blue Cheese Crusted Filet Mignon with Port wine Sauce</a></li>
-            <li><a class="main_list second" href="recipes/mushrooms.html">Mouth-Watering Stuffed Mushrooms</a></li>
-            <li><a class="main_list third" href="recipes/salmon.html">Basic Grilled Salmon</a></li>
-        </ul>
+    <ul class="main_list">
+        <li><a class="main_list first" href="recipes/mignon.html">Blue Cheese Crusted Filet Mignon with Port wine Sauce</a></li>
+        <li><a class="main_list second" href="recipes/mushrooms.html">Mouth-Watering Stuffed Mushrooms</a></li>
+        <li><a class="main_list third" href="recipes/salmon.html">Basic Grilled Salmon</a></li>
+    </ul>
 </body>
 </html>
