--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <img class="image"src="images/buffett.jpeg" alt="Large Buffet">
     <p class="para">This site is a part of The Odin Project curriculum, where i can practice some HTML and CSS</p> 
     <h2 class="second_title">Available Recipes:</h2>
-    <ul class="main_list">
+    <ol class="main_list">
         <li><a class="main_list first" href="recipes/mignon.html">Blue Cheese Crusted Filet Mignon with Port wine Sauce</a></li>
         <li><a class="main_list second" href="recipes/mushrooms.html">Mouth-Watering Stuffed Mushrooms</a></li>
         <li><a class="main_list third" href="recipes/salmon.html">Basic Grilled Salmon</a></li>
-    </ul>
+    </ol>
 </body>
 </html>
