--- a/recipes/mignon.html
+++ b/recipes/mignon.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style_secondary.css">
     <title>Crusted Filet Mignon</title>
 </head>
 <body>
-    <h1>Blue Cheese Crusted Filet Mignon with Port wine Sauce</h1>
-        <img src="../images/crusted_filet.jpg" alt="Crusted Fillet Mignon" width="400">
+    <h1 class="main_title">Blue Cheese Crusted Filet Mignon with Port wine Sauce</h1>
+    <img class="image" src="../images/crusted_filet.jpg" alt="Crusted Fillet Mignon">
 
-    <h2>Before you start</h2>
-        <h3>Timing</h3>
+    <h2 class="secondary_title">Before you start</h2>
+        <h3 class="tertiary_title">Timing</h3>
             <ul>
                 <li><b>Prep Time: </b>10 mins</li>
                 <li><b>Cook Time: </b>25 mins</li>
@@ -22,7 +22,7 @@
                 <li><b>Yield: </b>4 servings</li>
             </ul>
 
-        <h3>Nutrition Facts</h3>
+        <h3 class="tertiary_title">Nutrition Facts</h3>
             <ul>
                 <li><b>Calories: </b>402</li>
                 <li><b>Fat: </b>28 g</li>
@@ -30,7 +30,7 @@
                 <li><b>Protein: </b>25 g</li>
             </ul>
 
-        <h3>Ingredients</h3>
+        <h3 class="tertiary_title">Ingredients</h3>
             <ul>
                 <li>1 tablespoon butter</li>
                 <li>1/2 cup minced white onion</li>
@@ -44,30 +44,30 @@
                 <li>1/4 cup panko bread crumbs</li>
             </ul>
 
-    <h2>Directions</h2>
-        <h3>Step 1</h3>
-            <p>Melt butter in a skillet over medium heat. Add the onion, garlic and thyme. 
+    <h2 class="secondary_title">Directions</h2>
+        <h3 class="tertiary_title">Step 1</h3>
+            <p class="para">Melt butter in a skillet over medium heat. Add the onion, garlic and thyme. 
                 Cook, stirring constantly, until onion is tender. Stir in the beef broth, 
                 scraping any onion bits from the bottom of the pan, then stir in the port wine. 
                 Bring to a boil, and cook until the mixture has reduced to about 1/2 cup. Set aside. 
                 This may also be made ahead of time, and reheated.</p>
-        <h3>Step 2</h3>
-            <p>Preheat the oven to 350 degrees F (175 degrees C). Heat oil in a cast-iron or 
+        <h3 class="tertiary_title">Step 2</h3>
+            <p class="para">Preheat the oven to 350 degrees F (175 degrees C). Heat oil in a cast-iron or 
                 other oven-safe skillet over high heat. Sear steaks quickly on both sides until 
                 brown, then place the whole pan into the oven.</p>
-        <h3>Step 3</h3>
-            <p>Roast steaks in the oven for about 15 minutes for medium rare - with an 
+        <h3 class="tertiary_title">Step 3</h3>
+            <p class="para">Roast steaks in the oven for about 15 minutes for medium rare - with an 
                 internal temperature of 145 degrees F (63 degrees C). You may adjust this 
                 time to allow the steaks to finish just below your desired degree of 
                 doneness if medium is not what you prefer. Remove from the oven, and place 
                 on a baking sheet. Stir together the panko crumbs and blue cheese. Top each 
                 steak with a layer of this mixture.</p>
-        <h3>Step 4</h3>
-            <p>Preheat the oven's broiler. Place steaks under the preheated broiler until the cheese 
+        <h3 class="tertiary_title">Step 4</h3>
+            <p class="para">Preheat the oven's broiler. Place steaks under the preheated broiler until the cheese 
                 topping is browned and bubbly. 3 to 4 minutes. Remove from the oven, and let stand 
                 for at least 15 minutes before serving. Serve with warm port wine sauce.</p>
-    <h2>Disclaimer</h2>
-            <p>All the information above can be found at 
+    <h2 class="secondary_title">Disclaimer</h2>
+            <p class="para">All the information above can be found at 
                 <a href="https://www.allrecipes.com/recipe/72267/blue-cheese-crusted-filet-mignon-with-port-wine-sauce/">
                 All Recipes Website</a>. All credits given to the author of this recipe.</p>
 </body>
