Add classes to match mignon.html file
Same classes like .main_title, .secondary_title, .tertiary_title,
.para, .image

--- a/recipes/mushrooms.html
+++ b/recipes/mushrooms.html
@@ -8,11 +8,11 @@
     <title>Stuffed Mushrooms</title>
 </head>
 <body>
-    <h1>Mouth-Watering Stuffed Mushrooms</h1>
-        <img src="../images/stuffed_mushrooms.jpg" alt="" width="650">
+    <h1 class="main_title">Mouth-Watering Stuffed Mushrooms</h1>
+        <img class="image" src="../images/stuffed_mushrooms.jpg" alt="" width="650">
 
-    <h2>Before you start</h2>
-        <h3>Timing</h3>
+    <h2 class="secondary_title">Before you start</h2>
+        <h3 class="tertiary_title">Timing</h3>
             <ul>
                 <li><b>Prep Time: </b>25 mins</li>
                 <li><b>Cook Time: </b>20 mins</li>
@@ -21,7 +21,7 @@
                 <li><b>Yield: </b>12 large mushrooms</li>
             </ul>
 
-        <h3>Nutrition Facts</h3>
+        <h3 class="tertiary_title">Nutrition Facts</h3>
             <ul>
                 <li><b>Calories: </b>88</li>
                 <li><b>Fat: </b>08 g</li>
@@ -29,7 +29,7 @@
                 <li><b>Protein: </b>03 g</li>
             </ul>
 
-        <h3>Ingredients</h3>
+        <h3 class="tertiary_title">Ingredients</h3>
             <ul>
                 <li>12 whole fresh mushrooms</li>
                 <li>1 tablespoon vegetable oil</li>
@@ -41,27 +41,27 @@
                 <li>1/4 teaspoon ground cayenne pepper</li>
             </ul>
 
-    <h2>Directions</h2>
-        <h3>Step 1</h3>
-            <p>Preheat the oven to 350 degrees F (175 degrees C). Spray a baking sheet with cooking 
+    <h2 class="secondary_title">Directions</h2>
+        <h3 class="tertiary_title">Step 1</h3>
+            <p class="para">Preheat the oven to 350 degrees F (175 degrees C). Spray a baking sheet with cooking 
                 spray. Clean mushrooms with a damp paper towel; carefully break off stems. 
                 Chop stems extremely fine, discarding the tough end of stems.</p>
 
-        <h3>Step 2</h3>
-            <p>Heat oil in a large skillet over medium heat. Add garlic and chopped mushroom stems; 
+        <h3 class="tertiary_title">Step 2</h3>
+            <p class="para">Heat oil in a large skillet over medium heat. Add garlic and chopped mushroom stems; 
                 fry until any moisture has evaporated, taking care not to burn garlic. Set aside to 
                 cool.</p>
 
-        <h3>Step 3</h3>
-            <p>Stir in cream cheese, Parmesan cheese, black pepper, onion powder, and cayenne. The 
+        <h3 class="tertiary_title">Step 3</h3>
+            <p class="para">Stir in cream cheese, Parmesan cheese, black pepper, onion powder, and cayenne. The 
                 mixture will be very thick; use a teaspoon to fill each mushroom cap with a generous 
                 amount of stuffing. Arrange mushroom caps on the prepared cookie sheet.</p>
 
-        <h3>Step 4</h3>
-            <p>Bake in the preheated oven until the mushrooms are piping hot, about 20 minutes.</p>
+        <h3 class="tertiary_title">Step 4</h3>
+            <p class="para">Bake in the preheated oven until the mushrooms are piping hot, about 20 minutes.</p>
 
-    <h2>Disclaimer</h2>
-            <p>All the information above can be found at 
+    <h2 class="secondary_title">Disclaimer</h2>
+            <p class="para">All the information above can be found at 
                 <a href="https://www.allrecipes.com/recipe/15184/mouth-watering-stuffed-mushrooms/">
                 All Recipes Website</a>. All credits given to the author of this recipe.</p>
 </body>
