--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -8,11 +8,11 @@
     <title>Grilled Salmon</title>
 </head>
 <body>
-    <h1>Basic Grilled Salmon</h1>
-        <img src="../images/grilled_salmon.jpg" alt="" width="400" height="450">
+    <h1 class="main_title">Basic Grilled Salmon</h1>
+        <img class="image" src="../images/grilled_salmon.jpg" alt="" width="400" height="450">
 
-    <h2>Before you start</h2>
-        <h3>Timing</h3>
+    <h2 class="secondary_title">Before you start</h2>
+        <h3 class="tertiary_title">Timing</h3>
             <ul>
                 <li><b>Prep Time: </b>15 mins</li>
                 <li><b>Cook Time: </b>16 mins</li>
@@ -22,7 +22,7 @@
                 <li><b>Yield: </b>6 servings</li>
             </ul>
 
-        <h3>Nutrition Facts</h3>
+        <h3 class="tertiary_title">Nutrition Facts</h3>
             <ul>
                 <li><b>Calories: </b>318</li>
                 <li><b>Fat: </b>20 g</li>
@@ -30,7 +30,7 @@
                 <li><b>Protein: </b>21 g</li>
             </ul>
 
-        <h3>Ingredients</h3>
+        <h3 class="tertiary_title">Ingredients</h3>
             <ul>
                 <li>1 1/2 pounds salmon fillets</li>
                 <li>lemon pepper to taste</li>
@@ -42,25 +42,25 @@
                 <li>1/4 cup vegetable oil</li>
             </ul>
 
-    <h2>Directions</h2>
-        <h3>Step 1</h3>
-            <p>Season salmon fillets with lemon pepper, garlic powder, and salt.</p>
+    <h2 class="secondary_title">Directions</h2>
+        <h3 class="tertiary_title">Step 1</h3>
+            <p class="para">Season salmon fillets with lemon pepper, garlic powder, and salt.</p>
 
-        <h3>Step 2</h3>
-            <p>In a small bowl, stir together soy sauce, brown sugar, water, and vegetable oil 
+        <h3 class="tertiary_title">Step 2</h3>
+            <p class="para">In a small bowl, stir together soy sauce, brown sugar, water, and vegetable oil 
                 until sugar is dissolved. Place fish in a large resealable plastic bag with the soy 
                 sauce mixture, seal, and turn to coat. Refrigerate for at least 2 hours.</p>
 
-        <h3>Step 3</h3>
-            <p>Preheat grill for medium heat.</p>
+        <h3 class="tertiary_title">Step 3</h3>
+            <p class="para">Preheat grill for medium heat.</p>
 
-        <h3>Step 4</h3>
-            <p>Lightly oil grill grate. Place salmon on the preheated grill, and discard marinade. 
+        <h3 class="tertiary_title">Step 4</h3>
+            <p class="para">Lightly oil grill grate. Place salmon on the preheated grill, and discard marinade. 
                 Cook salmon for 6 to 8 minutes per side, or until the fish flakes easily with a 
                 fork.</p>
 
-    <h2>Disclaimer</h2>
-            <p>All the information above can be found at 
+    <h2 class="secondary_title">Disclaimer</h2>
+            <p class="para">All the information above can be found at 
                 <a href="https://www.allrecipes.com/recipe/12720/grilled-salmon-i/">
                 All Recipes Website</a>. All credits given to the author of this recipe.</p>
 </body>
